--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,21 @@
 			<artifactId>jjwt-jackson</artifactId> <!-- for JSON processing -->
 			<version>0.11.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+		<!-- Add This Dependency in Your pom.xml -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Hibernate Dependency (Optional, already included in spring-boot-starter-data-jpa) -->
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
 
 	</dependencies>
 
